# perturbation-drug-discovery

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
configs/: base.yaml  default.yaml
data/results/: baseline_naive.json
docs/: architecture.md  benchmark-spec.md  problem-definition.md  runbook.md
reports/: summary.txt
scripts/: generate_pipeline_figure.py
src/: constants.py  runtime_paths.py
src/analysis/: interpret_perturbation_results.py  visualize_results.py
src/data/: download_norman2019.py  download_string_ppi.py  loader.py  prepare_perturbation_dataset.py  preprocessor.py
src/experiments/: unseen_perturbation_generalization.py
src/models/: train_baseline_classifier.py  train_graph_perturbation_model.py  train_mlp_classifier.py  train_perturbation_effect_model.py  train_scgen_style_model.py
src/perturbation_dd/: __init__.py  __main__.py  cli.py  config.py  types.py
src/perturbation_dd/data/: access.py  prepare.py  preprocessing.py
src/perturbation_dd/evaluation/: baselines.py  metrics.py  reporting.py
src/perturbation_dd/models/: __init__.py  inference.py
src/perturbation_dd/ranking/: __init__.py  service.py
src/perturbation_dd/serving/: __init__.py  api.py
src/perturbation_dd/splits/: __init__.py  registry.py
src/perturbation_dd/training/: __init__.py  runs.py  (+1 more)
tests/: test_api.py  test_baselines.py  test_loader.py  test_prepare_data.py  test_ranking.py  test_split_registry.py  test_training_backends.py
(+1 files in other folders)
