[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perturbation-dd"
version = "0.1.0"
description = "Reproducible perturbation-response benchmark and follow-up prioritization pipeline."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Ahmed Ali" }
]
dependencies = [
  "anndata>=0.9.0",
  "fastapi>=0.115.0",
  "h5py>=3.8.0",
  "mlflow>=2.17.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0",
  "scanpy>=1.9.0",
  "scikit-learn>=1.3.0",
  "scikit-misc>=0.3.0",
  "scipy>=1.10.0",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "typer>=0.12.5",
  "uvicorn>=0.30.6",
  "zarr<3",
  "numcodecs<0.14",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
pdd = "perturbation_dd.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
ignore_missing_imports = true
packages = ["perturbation_dd"]
